; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/port/win32/extr_socket.c_pgwin32_accept.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/port/win32/extr_socket.c_pgwin32_accept.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.sockaddr = type { i32 }

@INVALID_SOCKET = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @pgwin32_accept(i64 %0, %struct.sockaddr* %1, i32* %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.sockaddr*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i64, align 8
  store i64 %0, i64* %5, align 8
  store %struct.sockaddr* %1, %struct.sockaddr** %6, align 8
  store i32* %2, i32** %7, align 8
  %9 = call i32 (...) @pgwin32_poll_signals()
  %10 = load i64, i64* %5, align 8
  %11 = load %struct.sockaddr*, %struct.sockaddr** %6, align 8
  %12 = load i32*, i32** %7, align 8
  %13 = call i64 @WSAAccept(i64 %10, %struct.sockaddr* %11, i32* %12, i32* null, i32 0)
  store i64 %13, i64* %8, align 8
  %14 = load i64, i64* %8, align 8
  %15 = load i64, i64* @INVALID_SOCKET, align 8
  %16 = icmp eq i64 %14, %15
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = call i32 (...) @TranslateSocketError()
  %19 = load i64, i64* @INVALID_SOCKET, align 8
  store i64 %19, i64* %4, align 8
  br label %22

20:                                               ; preds = %3
  %21 = load i64, i64* %8, align 8
  store i64 %21, i64* %4, align 8
  br label %22

22:                                               ; preds = %20, %17
  %23 = load i64, i64* %4, align 8
  ret i64 %23
}

declare dso_local i32 @pgwin32_poll_signals(...) #1

declare dso_local i64 @WSAAccept(i64, %struct.sockaddr*, i32*, i32*, i32) #1

declare dso_local i32 @TranslateSocketError(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
